--- a/templates/html/index.tmpl.html
+++ b/templates/html/index.tmpl.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="height=device-height,width=device-width" />
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
 <div id="blurr">
@@ -66,6 +67,9 @@
                                placeholder="Номер телефона" required>
                         <span class="help-block">Для служебных устройств - служебный номер подразделения</span>
                     </div>
+                </div>
+                <div class="form-group">
+                    <div class="g-recaptcha" data-sitekey="6Lc6STEUAAAAAFRCuy8q2LbDNknOA_DkAwaRS91b"></div>
                 </div>
             </div>
             <div class="form-group">
